--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.wang.avi:library:2.1.3'
 }
 apply plugin: 'com.google.gms.google-services'
