--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.left.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -18,6 +18,7 @@ android {
         }
     }
 }
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -35,6 +36,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.wang.avi:library:2.1.3'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
