--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+
 }
 apply plugin: 'com.google.gms.google-services'
