--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tv.sportssidekick.sportssidekick">
     <uses-permission android:name="android.permission.INTERNET" />
-    Include following permission if you want to cache images on SD card
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
