Manage chat - in progress.

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -13,10 +13,6 @@ android {
 
         renderscriptTargetApi 17
         renderscriptSupportModeEnabled true
-
-        jackOptions {
-            enabled true
-        }
     }
     buildTypes {
         release {
@@ -26,8 +22,8 @@ android {
     }
 
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_7
     }
 }
 
