--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -26,6 +26,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
         sourceCompatibility JavaVersion.VERSION_1_7
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 
@@ -63,6 +67,10 @@ dependencies {
     compile files('libs/YoutubeAndroidPlayerApi.jar')
     compile 'com.google.apis:google-api-services-youtube:v3-rev181-1.22.0'
     compile 'com.android.support:multidex:1.0.1'
+
+    compile 'com.google.http-client:google-http-client-android:1.20.0'
+    compile 'com.google.api-client:google-api-client-android:1.20.0'
+    compile 'com.google.api-client:google-api-client-gson:1.20.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
