--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -44,9 +44,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
@@ -63,7 +63,7 @@ dependencies {
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
     compile 'rongi.rotate-layout:rotate-layout:2.0.0'
     compile 'com.github.lzyzsd:circleprogress:+'
-    compile 'com.android.support:percent:25.1.0'
+    compile 'com.android.support:percent:25.1.1'
     compile files('libs/YoutubeAndroidPlayerApi.jar')
     compile 'com.google.apis:google-api-services-youtube:v3-rev181-1.22.0'
     compile 'com.android.support:multidex:1.0.1'
@@ -73,5 +73,7 @@ dependencies {
     compile 'com.google.api-client:google-api-client-gson:1.20.0'
 
     compile 'com.twilio:video-android:1.0.0-beta6'
+
+    compile 'com.gamesparks.sdk:gamesparks-android-client-sdk:+'
 }
 apply plugin: 'com.google.gms.google-services'
