--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -27,53 +27,54 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
     }
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+    }
+
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 }
 
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
-    compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
-    compile 'com.jakewharton:butterknife:8.4.0'
+
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
-    compile 'com.android.support:appcompat-v7:25.1.1'
+
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:percent:25.2.0'
+    compile 'com.android.support:multidex:1.0.1'
+
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-config:10.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.wang.avi:library:2.1.3'
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
-    testCompile 'junit:junit:4.12'
-    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.3.0'
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.0'
-    compile 'com.kyleduo.switchbutton:library:1.4.4'
-    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
-    compile 'rongi.rotate-layout:rotate-layout:2.0.0'
-    compile 'com.github.lzyzsd:circleprogress:+'
-    compile 'com.android.support:percent:25.1.1'
-    compile files('libs/YoutubeAndroidPlayerApi.jar')
-    compile 'com.google.apis:google-api-services-youtube:v3-rev181-1.22.0'
-    compile 'com.android.support:multidex:1.0.1'
-
     compile 'com.google.http-client:google-http-client-android:1.20.0'
     compile 'com.google.api-client:google-api-client-android:1.20.0'
     compile 'com.google.api-client:google-api-client-gson:1.20.0'
+    compile files('libs/YoutubeAndroidPlayerApi.jar')
+    compile 'com.google.apis:google-api-services-youtube:v3-rev181-1.22.0'
 
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0.pr1'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.twilio:video-android:1.0.0-beta6'
-
     compile 'com.gamesparks.sdk:gamesparks-android-client-sdk:+'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.github.lzyzsd:circleprogress:+'
+    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
+    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.3.0'
+    compile 'com.kyleduo.switchbutton:library:1.4.4'
+    compile 'com.wang.avi:library:2.1.3'
+    compile 'rongi.rotate-layout:rotate-layout:2.0.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
