--- a/SportsSideKick/build.gradle
+++ b/SportsSideKick/build.gradle
@@ -8,12 +8,17 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.google.gms:google-services:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong  in the individual module build.gradle files
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "http://repo.gamesparks.net/mvn"
+        }
     }
 }
 
