--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -89,5 +89,9 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Checkout (Android In-App Billing Library) - https://github.com/serso/android-checkout
+    compile 'org.solovyev.android:checkout:1.0.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
