--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -122,5 +122,6 @@ dependencies {
     // SnappySmoothScroller - https://github.com/nshmura/SnappySmoothScroller
     compile 'com.nshmura:snappysmoothscroller:1.0.0'
 
+    compile 'org.jsoup:jsoup:1.10.2'
 }
 apply plugin: 'com.google.gms.google-services'
