--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
 
-//    // We need Firebase for Push notifications!
+//  We need Firebase for Push notifications!
     compile 'com.google.firebase:firebase-core:10.2.4'
     compile 'com.google.firebase:firebase-messaging:10.2.4'
 
