--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -23,7 +23,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 3
-        versionName "1.0.0.1"
+        versionName "1.0.0.2"
         testInstrumentationRunner "android.support.left.runner.AndroidJUnitRunner"
         multiDexEnabled true
 
@@ -99,7 +99,7 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-s3:2.4.2'
 
     compile 'com.github.lzyzsd:circleprogress:+'
-    compile 'com.gamesparks.sdk:gamesparks-java-sdk:+'
+//    compile 'com.gamesparks.sdk:gamesparks-java-sdk:+'
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile 'com.github.hotchemi:permissionsdispatcher:2.3.0'
@@ -137,5 +137,12 @@ dependencies {
 
 
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.0'
+
+    // https://github.com/Atrox/haikunatorjava Random human readable name
+    compile 'me.atrox.haikunator:Haikunator:1.3'
+
+    // GAMESPARKS LIBRARY:
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    compile group: 'com.neovisionaries', name: 'nv-websocket-client', version: '2.2'
 }
 apply plugin: 'com.google.gms.google-services'
