--- a/SportsSideKick/app/src/sportsidekick/AndroidManifest.xml
+++ b/SportsSideKick/app/src/sportsidekick/AndroidManifest.xml
@@ -54,6 +54,16 @@
 
         <!-- ** ** ** ** ** ** ** ** * -->
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="tv.sportssidekick.sportssidekick.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
