--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -36,8 +36,8 @@ android {
     productFlavors {
         sportsidekick {
             applicationId "tv.sportssidekick.sportssidekick"
-            versionCode 3
-            versionName "1.0.0.2"
+            versionCode 4
+            versionName "5.0.0.3"
         }
     }
 
@@ -51,7 +51,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false // TODO @Nemanja fix proguard file
-            shrinkResources true
+            shrinkResources false // TODO this only works when minifyEnabled is true!
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
