--- a/SportsSideKick/app/src/sportsidekick/AndroidManifest.xml
+++ b/SportsSideKick/app/src/sportsidekick/AndroidManifest.xml
@@ -67,7 +67,10 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
+        <provider
+            android:name="com.facebook.FacebookContentProvider"
+            android:authorities="com.facebook.app.FacebookContentProvider102782376855276"
+            android:exported="true" />
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
             android:enabled="true" />
