--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -19,12 +19,12 @@ repositories {
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.0'
     defaultConfig {
 
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 26
 
         testInstrumentationRunner "android.support.left.runner.AndroidJUnitRunner"
         multiDexEnabled true
@@ -37,7 +37,7 @@ android {
         sportsidekick {
             applicationId "tv.sportssidekick.sportssidekick"
             versionCode 4
-            versionName "5.0.0.3"
+            versionName "5.0.0.4"
         }
     }
 
@@ -92,10 +92,10 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
 // Google support libraries
-    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:percent:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:percent:25.4.0'
     compile 'com.android.support:multidex:1.0.1'
 
 //  We only need Firebase for Push notifications!
