Introduced fake splash until user is loaded, Implemented chat image download, fixed strange comment behaviour.

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -179,5 +179,8 @@ dependencies {
     compile 'me.atrox.haikunator:Haikunator:1.3'
 //  Android Library to provide swipe, click and other functionality to RecyclerView
     compile 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
+//  Apache commons library to extract file name from url for image downloading - https://mvnrepository.com/artifact/commons-io/commons-io
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
 }
 apply plugin: 'com.google.gms.google-services'
