--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -1,22 +1,19 @@
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.google.com' }
     }
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.22.1'
     }
 }
-apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
-
 repositories {
     maven { url 'https://maven.fabric.io/public' }
-    maven {
-        url 'https://maven.google.com'
-    }
+    maven { url 'https://maven.google.com' }
 }
-
+apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
@@ -93,10 +90,11 @@ dependencies {
 
 // Google support libraries
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:25.4.0'
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:percent:25.4.0'
+    compile 'com.android.support:recyclerview-v7:26.0.0-beta2'
+    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
+    compile 'com.android.support:percent:26.0.0-beta2'
     compile 'com.android.support:multidex:1.0.1'
+
 
 //  We only need Firebase for Push notifications!
     compile 'com.google.firebase:firebase-core:10.2.4'
