--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
         <activity
             android:name=".activity.PhoneLoungeActivity"
-            android:configChanges="keyboardHidden|screenSize|orientation"
+            android:configChanges="keyboardHidden|screenSize|orientation|layoutDirection"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
         </activity>
