--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -76,6 +76,9 @@ android {
             flatDir {
                 dirs 'libs'
             }
+            maven {
+                url "https://jitpack.io"
+            }
         }
     }
 }
@@ -193,5 +196,7 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
 //  VideoView with controls
     compile 'com.linsea:universalvideoview:1.1.0@aar'
+//  TrueTime for Android - NTP client for Android : https://github.com/instacart/truetime-android
+    compile 'com.github.instacart.truetime-android:library-extension-rx:3.3'
 }
 apply plugin: 'com.google.gms.google-services'
