--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -97,7 +97,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-beta2'
     compile 'com.android.support:percent:26.0.0-beta2'
     compile 'com.android.support:multidex:1.0.1'
-
+//  Required by Glide - image library
+    compile 'com.android.support:support-v4:26.0.0-beta2'
 
 //  We only need Firebase for Push notifications!
     compile 'com.google.firebase:firebase-core:10.2.4'
@@ -198,5 +199,7 @@ dependencies {
     compile 'com.linsea:universalvideoview:1.1.0@aar'
 //  TrueTime for Android - NTP client for Android : https://github.com/instacart/truetime-android
     compile 'com.github.instacart.truetime-android:library-extension-rx:3.3'
+//  Image loader library - https://github.com/bumptech/glide/tree/3.0
+    compile 'com.github.bumptech.glide:glide:3.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
