--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -93,9 +93,9 @@ dependencies {
 
 // Google support libraries
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:26.0.0-beta2'
-    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
-    compile 'com.android.support:percent:26.0.0-beta2'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:percent:26.0.1'
     compile 'com.android.support:multidex:1.0.1'
 //  Required by Glide - image library
     compile 'com.android.support:support-v4:26.0.0-beta2'
