Refactoring code to support callback approach for file uploading instead of events.

--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         <activity
             android:name=".activity.LoungeActivity"
             android:screenOrientation="sensorLandscape"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="stateHidden|adjustPan">
         </activity>
 
         <activity
