boost image loading with glide

--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         tools:replace="android:theme">
         <activity
             android:name=".activity.SplashActivity"
+            android:theme="@style/AppTheme.Splash"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
