use library for taking and choosing photos

--- a/SportsSideKick/build.gradle
+++ b/SportsSideKick/build.gradle
@@ -19,9 +19,8 @@ allprojects {
         mavenCentral()
         jcenter()
         google()
-        maven {
-            url "http://repo.gamesparks.net/mvn"
-        }
+        maven { url "http://repo.gamesparks.net/mvn" }
+        maven { url "https://jitpack.io" }
     }
 }
 
