set item id to fragment event

--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         </activity>
 
         <activity
-            android:name=".ui.activity.MainActivityTablet"
+            android:name=".util.ui.MainActivityTablet"
             android:screenOrientation="sensorLandscape"
             android:windowSoftInputMode="stateHidden|adjustPan">
         </activity>
