--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -122,7 +122,13 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.10.2'
     // library for monitoring network connectivity, relies on rxJava
     implementation 'com.keiferstone:nonet:2.0.0'
-    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.0'
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
+    implementation 'com.github.VictorAlbertos:RxActivityResult:0.4.5-2.x'
+    implementation "com.github.miguelbcr:RxPaparazzo:0.6.0-2.x"
     // Random human readable name generator for testing
     implementation 'me.atrox.haikunator:Haikunator:1.3'
     // Android Library to provide swipe, click and other functionality to RecyclerView
