declare coroutines support in gradle

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -59,6 +59,12 @@ android {
     }
 }
 
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
+
 dependencies {
     // Android support libraries
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
