disable lint warnings about image content description

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -43,6 +43,9 @@ android {
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
+        lintOptions {
+            disable 'ContentDescription'
+        }
     }
     buildTypes {
         release {
