make lint only report errors, not warnings

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -41,8 +41,10 @@ android {
         }
     }
     lintOptions {
-        checkReleaseBuilds false
         abortOnError false
+        checkReleaseBuilds false
+        ignoreWarnings true
+        quiet true
         lintOptions {
             disable 'ContentDescription'
         }
