disable lint check for KeyboardInaccessibleWidget

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -46,7 +46,7 @@ android {
         ignoreWarnings true
         quiet true
         lintOptions {
-            disable 'ContentDescription'
+            disable 'ContentDescription', 'KeyboardInaccessibleWidget'
         }
     }
     buildTypes {
